welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: not found: value i
  for(j<- 0 to num-1){T(j+i)=T(j+i)+1}
                          ^golomb:5: error: not found: value i
  for(j<- 0 to num-1){T(j+i)=T(j+i)+1}
                                 ^