welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T = new Array[Int](num)
  T(0)=1
  for(i<- 1 to num-1){T(i)=T(0)}
  for(j<- 0 to num-1){T(j+i)=T(j+i)+1}
  return(T(num))
}